# nuda

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  scaffold.rs
crates/cli/templates/default/: gitignore  package.json
crates/cli/templates/default/pages/: index.html
crates/dev/: Cargo.toml
crates/dev/src/: handler.rs  lib.rs  map_uri_to_file.rs  port.rs
crates/scaffold/: Cargo.toml
crates/scaffold/src/: lib.rs  template.rs
crates/shared/src/: config.rs
templates/default/: README.md  nuda.config.json
templates/default/pages/: about.html  index.html
templates/default/routes/: index.js
