[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
shared = { version = "0.1.0", path = "../shared" }
log = "0.4.27"
mime_guess = "2.0.5"
